fix: flickering video overlay due to racecondition between canvas clear and repaint

--- a/src/style.css
+++ b/src/style.css
@@ -265,6 +265,7 @@ input:checked + .slider:before {
 #activation-hint {
   margin: 0;
   padding: 10px 15px;
+  min-height: 40px;
   border-radius: 8px;
   font-size: 0.85rem;
   text-align: center;
